Adding prettier and format everything
