# 4-typescript-api/src/models/user.model.ts
@@ -7,10 +7,13 @@ export interface IUser extends Document {
   // Optionally: password, createdAt, updatedAt, etc.
 }
 
-const UserSchema = new Schema<IUser>({
-  name: { type: String, required: true },
-  email: { type: String, required: true, unique: true },
-  userName: { type: String, required: true, unique: true },
-}, { timestamps: true });
+const UserSchema = new Schema<IUser>(
+  {
+    name: { type: String, required: true },
+    email: { type: String, required: true, unique: true },
+    userName: { type: String, required: true, unique: true },
+  },
+  { timestamps: true },
+);
 
 export const UserModel = mongoose.model<IUser>('User', UserSchema);
